--- a/android/build.gradle
+++ b/android/build.gradle
@@ -44,6 +44,7 @@ android {
 repositories {
     google()
     jcenter()
+    maven { url 'https://jitpack.io' }
     mavenCentral()
 }
 
@@ -51,9 +52,12 @@ repositories {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':capacitor-android')
-    implementation 'com.github.mik3y:usb-serial-for-android:3.4.3'
     implementation "androidx.appcompat:appcompat:$androidxAppCompatVersion"
     testImplementation "junit:junit:$junitVersion"
     androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
+
+    implementation 'com.github.mik3y:usb-serial-for-android:3.4.4'
+    // implementation 'com.google.guava:guava:31.0.1-android'
+
 }
