--- a/package.json
+++ b/package.json
@@ -44,25 +44,25 @@
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
-    "@capacitor/android": "^3.5.1",
-    "@capacitor/cli": "^3.5.1",
-    "@capacitor/core": "^3.5.1",
+    "@capacitor/android": "^3.6.0",
+    "@capacitor/cli": "^3.6.0",
+    "@capacitor/core": "^3.6.0",
     "@capacitor/docgen": "^0.2.0",
-    "@capacitor/ios": "^3.5.1",
+    "@capacitor/ios": "^3.6.0",
     "@ionic/eslint-config": "^0.3.0",
     "@ionic/prettier-config": "^2.0.0",
     "@ionic/swiftlint-config": "^1.1.2",
-    "@typescript-eslint/eslint-plugin": "5.27.0",
-    "eslint": "^8.17.0",
-    "prettier": "~2.6.2",
+    "@typescript-eslint/eslint-plugin": "5.29.0",
+    "eslint": "^8.18.0",
+    "prettier": "~2.7.1",
     "prettier-plugin-java": "~1.6.2",
     "rimraf": "^3.0.2",
-    "rollup": "^2.75.5",
+    "rollup": "^2.75.7",
     "swiftlint": "^1.0.1",
-    "typescript": "<4.5.0"
+    "typescript": "^4.7.4"
   },
   "peerDependencies": {
-    "@capacitor/core": "^3.5.1"
+    "@capacitor/core": "^3.6.0"
   },
   "prettier": "@ionic/prettier-config",
   "swiftlint": "@ionic/swiftlint-config",
