--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/plugin.cjs.js",
   "module": "dist/esm/index.js",
   "types": "dist/esm/index.d.ts",
+  "type": "module",
   "unpkg": "dist/plugin.js",
   "files": [
     "android/src/main/",
@@ -44,25 +45,25 @@
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
-    "@capacitor/android": "^4.1.0",
-    "@capacitor/cli": "^4.1.0",
-    "@capacitor/core": "^4.1.0",
+    "@capacitor/android": "^4.3.0",
+    "@capacitor/cli": "^4.3.0",
+    "@capacitor/core": "^4.3.0",
     "@capacitor/docgen": "^0.2.0",
-    "@capacitor/ios": "^4.1.0",
+    "@capacitor/ios": "^4.3.0",
     "@ionic/eslint-config": "^0.3.0",
     "@ionic/prettier-config": "^2.0.0",
     "@ionic/swiftlint-config": "^1.1.2",
-    "@typescript-eslint/eslint-plugin": "5.33.1",
-    "eslint": "^8.22.0",
+    "@typescript-eslint/eslint-plugin": "5.40.1",
+    "eslint": "^8.25.0",
     "prettier": "~2.7.1",
     "prettier-plugin-java": "~1.6.2",
     "rimraf": "^3.0.2",
-    "rollup": "^2.78.1",
+    "rollup": "^3.2.3",
     "swiftlint": "^1.0.1",
-    "typescript": "^4.7.4"
+    "typescript": "^4.8.4"
   },
   "peerDependencies": {
-    "@capacitor/core": "^4.1.0"
+    "@capacitor/core": "^4.3.0"
   },
   "prettier": "@ionic/prettier-config",
   "swiftlint": "@ionic/swiftlint-config",
