--- a/package.json
+++ b/package.json
@@ -39,22 +39,22 @@
     "prettier": "prettier \"**/*.{css,html,ts,js,java}\"",
     "swiftlint": "node-swiftlint",
     "docgen": "docgen --api UsbSerialPlugin --output-readme README.md --output-json dist/docs.json",
-    "build": "npm run clean && npm run docgen && tsc && rollup -c rollup.config.js",
+    "build": "npm run clean && npm run docgen && tsc && rollup -c rollup.config.mjs",
     "clean": "rimraf ./dist",
     "watch": "tsc --watch",
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
-    "@capacitor/android": "^4.3.0",
-    "@capacitor/cli": "^4.3.0",
-    "@capacitor/core": "^4.3.0",
+    "@capacitor/android": "^4.4.0",
+    "@capacitor/cli": "^4.4.0",
+    "@capacitor/core": "^4.4.0",
     "@capacitor/docgen": "^0.2.0",
-    "@capacitor/ios": "^4.3.0",
+    "@capacitor/ios": "^4.4.0",
     "@ionic/eslint-config": "^0.3.0",
     "@ionic/prettier-config": "^2.0.0",
     "@ionic/swiftlint-config": "^1.1.2",
     "@typescript-eslint/eslint-plugin": "5.40.1",
-    "eslint": "^8.25.0",
+    "eslint": "^8.26.0",
     "prettier": "~2.7.1",
     "prettier-plugin-java": "~1.6.2",
     "rimraf": "^3.0.2",
@@ -63,7 +63,7 @@
     "typescript": "^4.8.4"
   },
   "peerDependencies": {
-    "@capacitor/core": "^4.3.0"
+    "@capacitor/core": "^4.4.0"
   },
   "prettier": "@ionic/prettier-config",
   "swiftlint": "@ionic/swiftlint-config",
