--- a/package.json
+++ b/package.json
@@ -53,14 +53,14 @@
     "@ionic/eslint-config": "^0.3.0",
     "@ionic/prettier-config": "^2.0.0",
     "@ionic/swiftlint-config": "^1.1.2",
-    "@typescript-eslint/eslint-plugin": "5.40.1",
-    "eslint": "^8.26.0",
+    "@typescript-eslint/eslint-plugin": "5.43.0",
+    "eslint": "^8.27.0",
     "prettier": "~2.7.1",
     "prettier-plugin-java": "~1.6.2",
     "rimraf": "^3.0.2",
-    "rollup": "^3.2.3",
+    "rollup": "^3.3.0",
     "swiftlint": "^1.0.1",
-    "typescript": "^4.8.4"
+    "typescript": "~4.8.4"
   },
   "peerDependencies": {
     "@capacitor/core": "^4.4.0"
