--- a/package.json
+++ b/package.json
@@ -45,25 +45,25 @@
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
-    "@capacitor/android": "^4.6.3",
-    "@capacitor/cli": "^4.6.3",
-    "@capacitor/core": "^4.6.3",
-    "@capacitor/docgen": "^0.2.0",
-    "@capacitor/ios": "^4.6.3",
+    "@capacitor/android": "^4.7.3",
+    "@capacitor/cli": "^4.7.3",
+    "@capacitor/core": "^4.7.3",
+    "@capacitor/docgen": "^0.2.1",
+    "@capacitor/ios": "^4.7.3",
     "@ionic/eslint-config": "^0.3.0",
     "@ionic/prettier-config": "^2.0.0",
     "@ionic/swiftlint-config": "^1.1.2",
-    "@typescript-eslint/eslint-plugin": "5.51.0",
-    "eslint": "^8.33.0",
-    "prettier": "~2.8.3",
-    "prettier-plugin-java": "~2.0.0",
-    "rimraf": "^4.1.2",
-    "rollup": "^3.14.0",
+    "@typescript-eslint/eslint-plugin": "5.58.0",
+    "eslint": "^8.38.0",
+    "prettier": "~2.8.7",
+    "prettier-plugin-java": "~2.1.0",
+    "rimraf": "^5.0.0",
+    "rollup": "^3.20.2",
     "swiftlint": "^1.0.1",
-    "typescript": "^4.8.4"
+    "typescript": "~4.8.4"
   },
   "peerDependencies": {
-    "@capacitor/core": "^4.6.3"
+    "@capacitor/core": "^4.7.3"
   },
   "prettier": "@ionic/prettier-config",
   "swiftlint": "@ionic/swiftlint-config",
