--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "usb-serial-plugin",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "This plugin can be used for reading data from other device over the usb channel",
   "main": "dist/plugin.cjs.js",
   "module": "dist/esm/index.js",
@@ -45,25 +45,25 @@
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
-    "@capacitor/android": "^4.7.3",
-    "@capacitor/cli": "^4.7.3",
-    "@capacitor/core": "^4.7.3",
+    "@capacitor/android": "^5.0.3",
+    "@capacitor/cli": "^5.0.3",
+    "@capacitor/core": "^5.0.3",
     "@capacitor/docgen": "^0.2.1",
-    "@capacitor/ios": "^4.7.3",
+    "@capacitor/ios": "^5.0.3",
     "@ionic/eslint-config": "^0.3.0",
-    "@ionic/prettier-config": "^2.0.0",
+    "@ionic/prettier-config": "^3.0.0",
     "@ionic/swiftlint-config": "^1.1.2",
-    "@typescript-eslint/eslint-plugin": "5.58.0",
-    "eslint": "^8.38.0",
-    "prettier": "~2.8.7",
+    "@typescript-eslint/eslint-plugin": "5.59.6",
+    "eslint": "^8.40.0",
+    "prettier": "~2.8.8",
     "prettier-plugin-java": "~2.1.0",
     "rimraf": "^5.0.0",
-    "rollup": "^3.20.2",
-    "swiftlint": "^1.0.1",
-    "typescript": "~4.8.4"
+    "rollup": "^3.21.7",
+    "swiftlint": "^1.0.2",
+    "typescript": "<5.0.0"
   },
   "peerDependencies": {
-    "@capacitor/core": "^4.7.3"
+    "@capacitor/core": "^5.0.3"
   },
   "prettier": "@ionic/prettier-config",
   "swiftlint": "@ionic/swiftlint-config",
